--- a/templates/solving_id.html
+++ b/templates/solving_id.html
@@ -2,23 +2,6 @@
 
 {% block center %}
 <div class="container-screen">
-    <div class="row">
-        <h4>Задача</h4>
-    </div>
-    <div class="row">
-        <div class="col-lg-2">Название</div>
-        <div class="col-lg-10">{{ task.name }}</div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12"><a href="{{ task.link }}">Ссылка</a></div>
-    </div>
-    <div class="row">
-        <h4>Решение</h4>
-    </div>
-    <div class="row">
-        <div class="col-lg-12"><a href="/files/{{ task.file_path }}">Скачать</a></div>
-    </div>
-
     <div class="col-lg-8 after-add">
         <div class="row table-head task-head">
             <div class="col form-list without-center padding-in-form-10">
@@ -56,9 +39,7 @@
                     <textarea class="textbox color-blue text-on-white remark"
                               name="text" id="text1" placeholder="
                                   Заполните только те поля, к которым у вас есть замечания
-                                   Если имеется общее замечание, заполните это поле">
-
-                        </textarea>
+                                   Если имеется общее замечание, заполните это поле"></textarea>
                     <input class="add-button download" id="submit" type="submit" value="Отправить">
                 </form>
             </div>
