--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -5,7 +5,7 @@
     {% csrf_token %}
     <div class="user-details">
         <div class="input-box">
-            <input type="email" placeholder="Введите почту" id="email" name="email" aria-describedby="email_help"
+            <input type="text" placeholder="Введите почту" id="username" name="username" aria-describedby="email_help"
                    required>
         </div>
         <div class="input-box">
